# mavlink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Microservices/: Mavlink_Command.c  Mavlink_Command.h  Mavlink_Heart.c  Mavlink_Heart.h  Mavlink_Joystick.c  Mavlink_Joystick.h  Mavlink_Mission.c  Mavlink_Mission.h  Mavlink_Parameters.c  Mavlink_Parameters.h
src/mavlink/: mavlink_get_info.h  mavlink_helpers.h  mavlink_types.h  protocol.h
src/mavlink/common/: common.h  mavlink.h  mavlink_msg_actuator_control_target.h  mavlink_msg_actuator_output_status.h  mavlink_msg_adsb_vehicle.h  mavlink_msg_ais_vessel.h  mavlink_msg_altitude.h  mavlink_msg_att_pos_mocap.h  mavlink_msg_attitude.h  mavlink_msg_attitude_quaternion.h  mavlink_msg_attitude_quaternion_cov.h  mavlink_msg_attitude_target.h  mavlink_msg_auth_key.h  mavlink_msg_autopilot_state_for_gimbal_device.h  mavlink_msg_autopilot_version.h  mavlink_msg_battery_status.h  mavlink_msg_button_change.h  mavlink_msg_camera_capture_status.h  mavlink_msg_camera_fov_status.h  mavlink_msg_camera_image_captured.h  mavlink_msg_camera_information.h  mavlink_msg_camera_settings.h  mavlink_msg_camera_tracking_geo_status.h  mavlink_msg_camera_tracking_image_status.h  mavlink_msg_camera_trigger.h  mavlink_msg_can_filter_modify.h  mavlink_msg_can_frame.h  mavlink_msg_canfd_frame.h  mavlink_msg_cellular_config.h  mavlink_msg_cellular_status.h  mavlink_msg_change_operator_control.h  mavlink_msg_change_operator_control_ack.h  mavlink_msg_collision.h  (+186 more)
src/route/: mavlink_route.c  mavlink_route.h
(+8 files in other folders)
